--- a/src/main/resources/templates/admin/course_creator/admin_course_creators.html
+++ b/src/main/resources/templates/admin/course_creator/admin_course_creators.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/assets/bootstrap-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/assets/fontawesome-6.4.2/css/all.css}"/>
     <!-- Custom styles for this template -->
     <link rel="stylesheet" th:href="@{/css/base.css}"/>
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="table-view" th:if="${librarians ne null}">
-                        <table class="table table-striped table-sm" id="filterTable">
+                        <table class="table table-striped table-sm table-borderless" id="filterTable">
                             <thead class="table-head">
                             <th>STT</th>
                             <th>Name</th>
