--- a/src/main/resources/templates/admin/feedback/admin_feedbacks.html
+++ b/src/main/resources/templates/admin/feedback/admin_feedbacks.html
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="table-responsive" th:if="${feedbacks ne null}">
-                        <table class="table table-striped table-sm border-1" id="filterTable-feedback">
+                        <table class="table table-striped table-sm table-borderless" id="filterTable-feedback">
                             <thead>
                             <tr class="n8">
                                 <th>STT</th>
