--- a/src/main/resources/templates/admin/training_type/admin_training-type.html
+++ b/src/main/resources/templates/admin/training_type/admin_training-type.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/assets/bootstrap-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/assets/fontawesome-6.4.2/css/all.css}"/>
     <link rel="stylesheet" th:href="@{/assets/fontawesome-6.4.2/css/all.css}"/>
 
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="table-responsive" th:if="${trainingTypes ne null}">
-                        <table class="table table-striped table-sm" id="filterTable-training">
+                        <table class="table table-striped table-sm table-borderless" id="filterTable-training">
                             <thead>
                             <tr>
                                 <th>STT</th>
