--- a/src/main/resources/templates/librarian/lecture/librarian_lectures.html
+++ b/src/main/resources/templates/librarian/lecture/librarian_lectures.html
@@ -8,9 +8,8 @@
 
 
     <!-- Bootstrap core CSS -->
-    <!--    <link rel="stylesheet" th:href="@{/assets/dist/css/bootstrap.min.css}">-->
+    <link rel="stylesheet" th:href="@{/assets/bootstrap-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" th:href="@{/assets/fontawesome-6.4.2/css/all.css}"/>
 
     <!-- Custom styles for this template -->
@@ -68,8 +67,8 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <table class="table table-striped table-sm" id="filterTable" style="width: 100%">
-                    <thead class="table-head">
+                <table class="table table-striped table-sm table-borderless" id="filterTable" style="width: 100%">
+                    <thead class="table-active">
                     <th>STT</th>
                     <th>Name</th>
                     <th>Email</th>
@@ -129,7 +128,7 @@
             "serverSide": true,
             "ordering": false,
             "pagingType": "simple_numbers",
-            "pageLength": 5,
+            "pageLength": 10,
             "language": {
                 "paginate": {
                     "first": "<<",
