--- a/src/main/resources/templates/admin/account/admin_accounts.html
+++ b/src/main/resources/templates/admin/account/admin_accounts.html
@@ -95,7 +95,7 @@
 
                     <div class="table-view" th:if="${accounts ne null}">
                         <table class="table table-striped table-sm table-borderless" id="filterTable">
-                            <thead class="table-head">
+                            <thead class="table-active">
                             <th>STT</th>
                             <th>Name</th>
                             <th>Email</th>
