--- a/src/main/resources/templates/admin/admin_dashboard.html
+++ b/src/main/resources/templates/admin/admin_dashboard.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="lib-main_menu-item">
                     <a th:href="@{/admin/login_as_another_account}">
-                        <i class="p-2 fas fa-chalkboard-teacher"></i>
+                        <i class="p-2 fas fa-chalkboard-user"></i>
                         Login as an another account</a>
                 </div>
                 <div class="lib-main_menu-item d-none">
