--- a/src/main/resources/templates/librarian/course/librarian_course-detail.html
+++ b/src/main/resources/templates/librarian/course/librarian_course-detail.html
@@ -120,7 +120,7 @@
                 </div>
                 <table class="table table-striped table-sm" id="coursesTable" style="width: auto">
                     <thead>
-                    <tr class="table-head">
+                    <tr class="table-active">
                         <th>STT</th>
                         <th>Lecturer Name</th>
                         <th>Lecturer Email</th>
