--- a/src/main/resources/templates/librarian/librarian_dashboard.html
+++ b/src/main/resources/templates/librarian/librarian_dashboard.html
@@ -37,13 +37,13 @@
 
                 <div class="lib-main_menu-item">
                     <a th:href="@{/librarian/lectures}">
-                        <i class="p-2 fa fa-book"></i>
+                        <i class="p-2 fas fa-chalkboard-teacher"></i>
                         Lecturers management</a>
                 </div>
 
                 <div class="lib-main_menu-item">
                     <a th:href="@{/librarian/courses_report}">
-                        <i class="p-2 fa fa-paper-plane"></i>
+                        <i class="p-2 fa fa-file-text"></i>
                         Courses report </a>
                 </div>
                 <!--                <div class="lib-main_menu-item">-->
