--- a/src/main/resources/templates/admin/course_creator/admin_course_creators.html
+++ b/src/main/resources/templates/admin/course_creator/admin_course_creators.html
@@ -70,7 +70,7 @@
 
                     <div class="table-view" th:if="${librarians ne null}">
                         <table class="table table-striped table-sm table-borderless" id="filterTable">
-                            <thead class="table-head">
+                            <thead class="table-active">
                             <th>STT</th>
                             <th>Name</th>
                             <th>Email</th>
