--- a/src/main/resources/templates/admin/system_log/admin_user_logs.html
+++ b/src/main/resources/templates/admin/system_log/admin_user_logs.html
@@ -114,7 +114,7 @@
 
                     <div class="table-responsive">
                         <table class="table table-striped table-sm" id="filterTable">
-                            <thead>
+                            <thead class="table-active">
                             <tr class="n8">
                                 <th>STT</th>
                                 <th>Email</th>
