--- a/src/main/resources/templates/admin/training_type/admin_training-type.html
+++ b/src/main/resources/templates/admin/training_type/admin_training-type.html
@@ -62,7 +62,7 @@
 
                         </div>
                         <!--                        </form>-->
-                        <div>
+                        <div class="mt-4">
                             <a class="lib_btn-add" type="button" th:href="@{/admin/trainingtypes/add}">
                                 <i class="fa-solid fa-plus"></i>
                                 <span>New</span>
@@ -74,12 +74,12 @@
 
                     <div class="table-responsive" th:if="${trainingTypes ne null}">
                         <table class="table table-striped table-sm table-borderless" id="filterTable-training">
-                            <thead>
+                            <thead class="table-active">
                             <tr>
                                 <th>STT</th>
                                 <th>Name</th>
                                 <th>Description</th>
-                                <th>Number of courses</th>
+                                <th style="width: fit-content"><span style="white-space: nowrap;">Number of courses</span></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -89,7 +89,7 @@
                                        th:text="${trainingType.trainingTypeName}"></a></td>
                                 <td><span class="code-archive-except"
                                           th:text="${trainingType.trainingTypeDescription}"> </span></td>
-                                <td th:text="${trainingType.getCourses().size()}">
+                                <td class="text-center" th:text="${trainingType.getCourses().size()}">
                                 </td>
 
                             </tr>
