--- a/src/main/resources/templates/librarian/course/librarian_courses.html
+++ b/src/main/resources/templates/librarian/course/librarian_courses.html
@@ -73,7 +73,7 @@
             <div class="table-view">
                 <table class="table table-striped table-sm table-borderless" id="coursesTable" style="width: 100%;">
                     <thead>
-                    <tr class="table-head">
+                    <tr class="table-active">
                         <th>STT</th>
                         <th>Code</th>
                         <th>Name</th>
