--- a/src/main/resources/templates/lecturer/document/lecturer_add-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_add-document.html
@@ -317,36 +317,10 @@
             'error'
         );
     }
-
-    const overlay = document.getElementById('overlay');
-    const form = document.getElementById('add-form');
-    let isSubmitting = false;
-
-    form.addEventListener('submit', function (event) {
-        event.preventDefault(); // Ngăn chặn form submit mặc định
-
-        if (isSubmitting) {
-            return; // Nếu form đang được submit, không làm gì
-        }
-
-        isSubmitting = true; // Đánh dấu form đang được submit
-
-        // Hiển thị overlay
-        overlay.style.display = 'block';
-
-        // Xử lý logic submit form
-        form.submit(); // Submit form
-        // ...
-
-        // Sau khi hoàn thành submit form, ẩn overlay
-        setTimeout(() => {
-            overlay.style.display = 'none';
-            isSubmitting = false;
-        }, 6000);
-    });
 </script>
 <script th:src="@{/js/editor.js}"></script>
 <script th:src="@{/js/validation_add-file.js}"></script>
+<script th:src="@{/js/overlay.js}"></script>
 </body>
 
 </html>
