Update search query

--- a/src/main/resources/templates/student/student_search-results.html
+++ b/src/main/resources/templates/student/student_search-results.html
@@ -87,8 +87,8 @@
                             </ul>
                         </div>
                         <div id="firstSearch">
-                            <ul th:if="${foundDocuments.size() == 0}">
-                                <img src="/images/no-result.png" style="width: 70%;">
+                            <ul class="d-flex justify-content-center" th:if="${foundDocuments.size() == 0}">
+                                <img src="/images/no-result.gif" style="width: 50%;">
                             </ul>
                             <ul>
                                 <li class="border-bottom" style="margin: 2rem 2rem"
