--- a/src/main/resources/static/css/styles/lecturer.css
+++ b/src/main/resources/static/css/styles/lecturer.css
@@ -486,3 +486,7 @@ label.error {
 #changeCourseStatus:hover {
     color: var(--link-color);
 }
+
+#defineResourceType:hover, #defineButton:hover {
+    color: var(--link-color);
+}
