--- a/src/main/resources/templates/lecturer/document/lecturer_update-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_update-document.html
@@ -177,7 +177,8 @@
 
                                 </div>
 
-                                <button type="submit" class="btn btn-save lecturer_btn-save"
+                                <button type="button" onclick="confirmSaveDocument()"
+                                        class="btn btn-save lecturer_btn-save"
                                         id="submitAllData">Save changes
                                 </button>
                                 <th:block th:if="${param.success}">
