--- a/src/main/resources/templates/lecturer/document/lecturer_add-document-to-resource-type.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_add-document-to-resource-type.html
@@ -198,7 +198,8 @@
                                 </div>
 
                                 <div>
-                                    <button type="submit" class="btn btn-save lecturer_btn-save"
+                                    <button type="button" onclick="confirmSaveDocument()"
+                                            class="btn btn-save lecturer_btn-save"
                                             id="submitAllData">Save
                                     </button>
                                     <th:block th:if="${param.success}">
