--- a/src/main/resources/templates/lecturer/lecturer.html
+++ b/src/main/resources/templates/lecturer/lecturer.html
@@ -60,8 +60,8 @@
                                                                 th:if="${course.lecturer ne null}">
                                                                 <a class="home__course-lecturer-link"
                                                                    href="">
-                                                                    <span>Lecturer: </span>
-                                                                    <span th:text="${course.lecturer.account.name}"></span>
+                                                                    <span>Created by: </span>
+                                                                    <span th:text="${course.librarian.account.name}"></span>
                                                                 </a>
                                                             </li>
                                                         </ul>
