Fix a little bit

--- a/src/main/resources/templates/lecturer/document/lecturer_add-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_add-document.html
@@ -112,7 +112,7 @@
                                     <input class="btn-check" type="radio" th:field="*{displayWithFile}"
                                            th:name="displayWithFile"
                                            value="true" id="displayContentType2" checked="checked" autocomplete="off">
-                                    <label class="btn btn-success" for="displayContentType2">Display with file
+                                    <label class="btn btn-success ps-3 pe-3" for="displayContentType2">Display content with available file
                                     </label>
                                 </div>
 
