--- a/src/main/resources/templates/lecturer/lecturer_notifications.html
+++ b/src/main/resources/templates/lecturer/lecturer_notifications.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" th:href="@{/css/fragment.css}"/>
     <link rel="stylesheet" th:href="@{/css/styles/lecturer.css}"/>
     <link rel="stylesheet" th:href="@{/css/styles/student.css}"/>
-
+    <!-- SweetAlert từ CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css">
 </head>
 <body class="app_container">
 <!-- Header -->
@@ -101,7 +104,6 @@
     const loadingAnimation = deleteButton.querySelector('.loading-animation');
 
     deleteButton.addEventListener('click', function () {
-        loadingAnimation.style.display = 'block';
         const selectedNotifications = Array.from(checkboxes)
             .filter(function (checkbox) {
                 return checkbox.checked;
@@ -111,19 +113,36 @@
             });
 
         if (selectedNotifications.length > 0) {
-            $.ajax({
-                url: '/notifications/delete',
-                method: 'POST',
-                data: JSON.stringify(selectedNotifications),
-                contentType: 'application/json',
-                success: function (response) {
-                    loadingAnimation.style.display = 'none';
-                    window.location.reload();
-                },
-                error: function (error) {
-                    console.error('Error:', error);
+            Swal.fire({
+                title: 'Delete all selected notifications?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    loadingAnimation.style.display = 'block';
+                    $.ajax({
+                        url: '/notifications/delete',
+                        method: 'POST',
+                        data: JSON.stringify(selectedNotifications),
+                        contentType: 'application/json',
+                        success: function (response) {
+                            window.location.reload();
+                        },
+                        error: function (error) {
+                            console.error('Error:', error);
+                        }
+                    });
                 }
             });
+        } else {
+            Swal.fire(
+                'No selected item!',
+                'Select notifications that you want to delete!',
+                'error'
+            );
         }
     });
 </script>
