--- a/src/main/resources/templates/student/student_notifications.html
+++ b/src/main/resources/templates/student/student_notifications.html
@@ -120,17 +120,28 @@
             });
 
         if (selectedNotifications.length > 0) {
-            loadingAnimation.style.display = 'block';
-            $.ajax({
-                url: '/notifications/delete',
-                method: 'POST',
-                data: JSON.stringify(selectedNotifications),
-                contentType: 'application/json',
-                success: function (response) {
-                    window.location.reload();
-                },
-                error: function (error) {
-                    console.error('Error:', error);
+            Swal.fire({
+                title: 'Delete all selected notifications?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    loadingAnimation.style.display = 'block';
+                    $.ajax({
+                        url: '/notifications/delete',
+                        method: 'POST',
+                        data: JSON.stringify(selectedNotifications),
+                        contentType: 'application/json',
+                        success: function (response) {
+                            window.location.reload();
+                        },
+                        error: function (error) {
+                            console.error('Error:', error);
+                        }
+                    });
                 }
             });
         } else {
