update librarian export course log

--- a/src/main/resources/templates/librarian/course/librarian_courses-report.html
+++ b/src/main/resources/templates/librarian/course/librarian_courses-report.html
@@ -239,21 +239,21 @@
 <script th:src="@{/js/librarian/librarian.js}"></script>
 
 <script th:inline="javascript">
-    function handleDateChange() {
-        console.log("Ngày đã thay đổi");
-        document.getElementById("myForm").submit(); // Thêm dòng này để submit form
-    }
-
-    function handleSizeChange() {
-        console.log("Kích thước trang đã thay đổi");
-        document.getElementById("myForm").submit(); // Thêm dòng này để submit form
-    }
-
-    function handleSearchKeyUp() {
-        var searchText = document.getElementById("search-text").value;
-        console.log("Đang tìm kiếm:", searchText);
-        document.getElementById("myForm").submit();
-    }
+    // function handleDateChange() {
+    //     console.log("Ngày đã thay đổi");
+    //     document.getElementById("myForm").submit(); // Thêm dòng này để submit form
+    // }
+    //
+    // function handleSizeChange() {
+    //     console.log("Kích thước trang đã thay đổi");
+    //     document.getElementById("myForm").submit(); // Thêm dòng này để submit form
+    // }
+    //
+    // function handleSearchKeyUp() {
+    //     var searchText = document.getElementById("search-text").value;
+    //     console.log("Đang tìm kiếm:", searchText);
+    //     document.getElementById("myForm").submit();
+    // }
 
 
 
