--- a/src/main/resources/templates/student/feedback/student_feedback-add.html
+++ b/src/main/resources/templates/student/feedback/student_feedback-add.html
@@ -209,7 +209,7 @@
 <!--Custom script-->
 <script th:src="@{/js/student/student.js}"></script>
 <script th:src="@{/js/student/feedback.js}"></script>
-
+<script th:src="@{/js/validation.js}"></script>
 <script th:inline="javascript">
 
     const textarea = document.getElementById('feedbackContent');
